homebridge/homebridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homebridge
  name: homebridge
  namespace: homebridge
spec:
  ports:
  - name: http
    port: 8581
    targetPort: http
  selector:
    app: homebridge
