homebridge/homebridge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: homebridge
  name: homebridge-ingress
spec:
  rules:
  - host: homebridge.10.20.0.240.nip.io
    http:
      paths:
      - backend:
          service:
            name: homebridge
            port:
              name: http
        path: /
        pathType: Prefix
